# CV_Realtime-Object-Detection

./: CMakeLists.txt  README.md
data/csv/: matrix.csv
include/: cascade.hpp  classify.hpp  image.hpp  process.hpp
src/: cascade.cpp  classify.cpp  image.cpp  objDetection.cpp  process.cpp
